# Applied_Computer_Graphics_2022S

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml  windows.yml
assets/: joint.blend  joint.blend1  rb1.scad  rb1.stl  rb2.scad  rb2.stl  rb3.scad  rb3.stl  rb4.scad  rb4.stl
doc/: setup_eigen.md  setup_glfw.md  submit.md
task0/: CMakeLists.txt  README.md  main.cpp
task00/: README.md
task01/: CMakeLists.txt  README.md  main.cpp
task02/: CMakeLists.txt  README.md  main.cpp  shader.frag  shader.vert
task03/: CMakeLists.txt  README.md  main.cpp  shader.frag
task04/: CMakeLists.txt  README.md  main.cpp
task05/: README.md  main.cpp  shader.frag
task06/: CMakeLists.txt  README.md  gltf_util.h  main.cpp
task07/: CMakeLists.txt  README.md  main.cpp
task08/: CMakeLists.txt  README.md  main.cpp
task09/: CMakeLists.txt  README.md  blend.py  cppmodule.cbp  main.cpp
task1/: CMakeLists.txt  README.md  main.cpp
task2/: CMakeLists.txt  README.md  main.cpp
task_00/: CMakeLists.txt  README.md
task_01/: CMakeLists.txt
