cmake_minimum_required(VERSION 3.12)

project(tasks)

add_subdirectory(task_00)
add_subdirectory(task_01)
add_subdirectory(task_02)
#add_subdirectory(task3)
#add_subdirectory(task4)
#add_subdirectory(task5)
#add_subdirectory(task6)
#add_subdirectory(task8)
#add_subdirectory(task9)
#add_subdirectory(task11)
