cmake_minimum_required(VERSION 3.12)

project(tasks)

add_subdirectory(task00)
add_subdirectory(task01)
add_subdirectory(task02)
#add_subdirectory(task3)
#add_subdirectory(task4)
#add_subdirectory(task5)
#add_subdirectory(task6)
#add_subdirectory(task8)
#add_subdirectory(task9)
#add_subdirectory(task11)
