cmake_minimum_required(VERSION 3.12)

project(tasks)

add_subdirectory(task00)
add_subdirectory(task01)
add_subdirectory(task02)
add_subdirectory(task03)
add_subdirectory(task04)
add_subdirectory(task05)
add_subdirectory(task06)
#add_subdirectory(task8)
#add_subdirectory(task9)
#add_subdirectory(task11)
